# grandson-pill-pal

./: .env.example  .gitignore  Dockerfile.monolith  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.extractor  README.md  alembic.ini  openapi.yaml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260128_043040_c46941e55759_initial_schema.py
backend/src/: __init__.py  config.py  main.py
backend/src/db/: __init__.py  database.py  mock_db.py  models.py  repository.py
backend/src/models/: __init__.py  common.py  prescription.py  reminder.py
backend/src/routers/: __init__.py  health.py  prescriptions.py
backend/src/services/: __init__.py  extractor_client.py  prescription_extractor.py
backend/tests/: __init__.py  conftest.py  test_extractor.py  test_health.py  test_prescriptions.py
backend/tests_integration/: __init__.py  conftest.py  test_data_integrity.py  test_multilanguage.py  test_prescription_workflow.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/api/: client.test.ts  client.ts  extractor.ts  index.ts  types.ts
frontend/src/components/: FloatingPills.test.tsx  FloatingPills.tsx  NavLink.test.tsx  PrescriptionForm.tsx  (+3 more)
scripts/: monolith_entrypoint.sh
src/components/: PrescriptionForm.tsx  SettingsBar.tsx  SuccessScreen.tsx
src/contexts/: LanguageContext.tsx
src/pages/: Index.tsx
(+6 files in other folders)
